Fix add button alignment on default rules table

--- a/src/styles/components/configuration/_defaults.scss
+++ b/src/styles/components/configuration/_defaults.scss
@@ -12,7 +12,7 @@
   }
 
   h3 {
-    padding: 20px 0;
+    padding-bottom: 20px 0;
 
     @include print {
       padding: 10px 0;
